bug: move button outside of textarea

--- a/client/index.html
+++ b/client/index.html
@@ -11,11 +11,10 @@
     <div id="app">
       <div id="chat_container"></div>
       <form>
-        <textarea name="prompt" cols="1" rows="1" placeholder="Ask Code-X...">
-          <button type="submit">
-            <img src="assets/send.svg" />
-          </button>
-        </textarea>
+        <textarea name="prompt" cols="1" rows="1" placeholder="Ask Code-X..."></textarea>
+        <button type="submit">
+          <img src="assets/send.svg" />
+        </button>
       </form>
     </div>
     <script type="module" src="script.js"></script>
